third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/from_str/struct_multi_fields.rs
#[derive(derive_more::FromStr)]
pub struct Foo {
    foo: i32,
    bar: i32,
}

fn main() {}
